tests/tests/snapshots/host_syntax_identity__identity_expr__sim-three-service__RecordCharge.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (db-insert Charges (record-cons ChargeRecord (id (uuid-new)) (order_id (field-access order id)) (amount (field-access order total)))))
(return order)
