tests/tests/snapshots/host_syntax_identity__identity_expr__sim-three-service__RecordShipment.snap
---
source: tests/tests/host_syntax_identity.rs
expression: rendered
---
(expr-stmt (db-insert Shipments (record-cons Shipment (id (uuid-new)) (order_id (field-access order id)))))
(return order)
